--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,6 +31,15 @@ a:hover {
     color:  $brown;
   }
 
+  ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+  }
+
+  li {
+      display: inline;
+  }
 
 
 .navbar {
@@ -80,8 +89,6 @@ section {
   }
   &.social {
     padding-top: 8rem;
-    padding-left: 55rem;
-    padding-right: 55rem;
     display: flex;
     justify-content: space-around;
     font-size: 5rem;
@@ -98,7 +105,7 @@ section {
 }
 
 .title{
-  background-image: url("./imgs/faith_steps_cover_6.jpg");
+  background-image: url("./imgs/faith_steps_cover_2.jpg");
   height: 50rem;
   width: 100%;
   background-size: cover;
